# src/api/model/index.ts
@@ -21,6 +21,7 @@ export * from './blockCreate';
 export * from './blockResponse';
 export * from './blockState';
 export * from './blockUpdate';
+export * from './caregiverConnectionChild';
 export * from './childCredentialsSet';
 export * from './childLoginRequest';
 export * from './childSettingsResponse';
@@ -32,6 +33,7 @@ export * from './connectionInvite';
 export * from './connectionResponse';
 export * from './connectionStatus';
 export * from './connectionTrustUpdate';
+export * from './connectionTypeUpdate';
 export * from './consentCreate';
 export * from './consentResponse';
 export * from './consentType';
